# SA

./: .gitignore  LICENSE  README.md  config.yaml  experiment.ipynb  pyproject.toml
src/: __init__.py  chunking.py  config.py  ocr.py  pipeline.py  utils.py
study_assistant/: __init__.py  chunking.py  config.py  graph_rag.py  ocr.py  pipeline.py  prompts.py  quiz_generator.py  utils.py
