[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-assistant"
version = "0.1.0"
description = "PDF 교재 → Obsidian vault 변환 파이프라인"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.0",
    "PyPDF2",
    "openai",
    "pyyaml",
    "nest_asyncio",
]

[tool.setuptools.packages.find]
include = ["src*"]
