[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-assistant"
version = "0.4.3"
description = "PDF"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.0",
    "PyPDF2",
    "openai",
    "pyyaml",
    "nest_asyncio",
    "pyvis",
]

[tool.setuptools.packages.find]
include = ["study_assistant*"]